test/corpus/dotted.txt
================================================================================
Dotted (improper) lists
================================================================================

(a . b)

--------------------------------------------------------------------------------

(source_file
  (call
    (identifier)
    tail: (identifier)))
================================================================================
Dotted tail after several elements
================================================================================

(a b c . d)

--------------------------------------------------------------------------------

(source_file
  (call
    (identifier)
    (identifier)
    (identifier)
    tail: (identifier)))
================================================================================
Dotted tail inside a nested list
================================================================================

(f (1 2 . 3) 4)

--------------------------------------------------------------------------------

(source_file
  (call
    (identifier)
    (call
      (num_lit)
      (num_lit)
      tail: (num_lit))
    (num_lit)))
================================================================================
Dotted rest parameter from test/api/semantics.pt
================================================================================

(check-num ((fn (first . rest) first) 8) 8)

--------------------------------------------------------------------------------

(source_file
  (call
    (identifier)
    (call
      (fn
        params: (list
          (identifier)
          tail: (identifier))
        (identifier))
      (num_lit))
    (num_lit)))
================================================================================
Dotted defn params from test/api/semantics.pt
================================================================================

(defn (phase1-tail-rest n . rest) rest)

--------------------------------------------------------------------------------

(source_file
  (defn
    params: (list
      (identifier)
      (identifier)
      tail: (identifier))
    (identifier)))
================================================================================
Dotted tail in an arglist
================================================================================

(fn (a . b) a)

--------------------------------------------------------------------------------

(source_file
  (fn
    params: (list
      (identifier)
      tail: (identifier))
    (identifier)))
================================================================================
A leading dot is not a list
================================================================================

(. a)

--------------------------------------------------------------------------------

(source_file
  (call
    (ERROR)
    (identifier)))
================================================================================
A form after the dotted tail is not a list
================================================================================

(a . b c)

--------------------------------------------------------------------------------

(source_file
  (call
    (identifier)
    (ERROR
      (identifier))
    tail: (identifier)))
================================================================================
Dotted path identifiers stay single tokens
================================================================================

foo.bar dynamic-library:open

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (identifier))
